<resources>
    <string name="app_name">MyFirstProject</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_login_password">Forgot Login Password</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="set_username">Set Username</string>
    <string name="set_password">Set Password</string>
    <string name="category">Category:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="gmail">Gmail</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="clear">Clear</string>
</resources>
